--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "debug": "^2.2.0",
     "trumpet": "^1.7.1",
     "through2": "^0.6.5",
-    "response-spy": "^0.0.2",
+    "response-spy": "~0.0.x",
     "mime-types": "^2.0.13"
   },
   "devDependencies": {
