--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "trumpet": "^1.7.1",
-    "through2": "^0.6.5",
+    "husky": "^0.8.1",
+    "mime-types": "^2.0.13",
     "response-spy": "~0.0.x",
-    "mime-types": "^2.0.13"
+    "through2": "^0.6.5",
+    "trumpet": "^1.7.1"
   },
   "devDependencies": {
     "connected": "0.0.2",
+    "eslint": "^0.23.0",
     "get-port": "^1.0.0",
     "hyperquest": "^1.2.0",
     "tape": "^4.0.0"
   },
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test.js",
+    "lint": "eslint index.js lib/*.js examples/*.js",
+    "precommit": "npm run lint && npm test"
   },
   "repository": {
     "type": "git",
